kubernetes/core/monitoring/external.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
    description: "ExternalName service for Grafana - resolves to the external Grafana hostname"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
