kubernetes/core/monitoring/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false"
    external-dns.alpha.kubernetes.io/hostname: grafana.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      name: Grafana
      conditions:
        - "[STATUS] == 200"
      url: https://grafana.cloud.danmanners.com/
      method: GET
spec:
  hostnames:
    - grafana.cloud.danmanners.com
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: gwapi
      namespace: default
      sectionName: https-cloud
  rules:
    - name: grafana
      backendRefs:
        - group: ""
          kind: Service
          name: monitoring-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
